--- a/.tmp/styles/animation.css
+++ b/.tmp/styles/animation.css
@@ -3,10 +3,10 @@
 */
 .fade {
     position: absolute;
-    top: 71px;
+    top: 0;
     left: 0;
     right: 0;
-    height: 100%;
+    height: 92%;
     opacity: 1;
 }
 .fade.ng-enter,
