--- a/.tmp/styles/main.css
+++ b/.tmp/styles/main.css
@@ -8,15 +8,22 @@ html {
 }
 
 #content {
-    margin-top: 71px;
+    /*margin-top: 71px;*/
+    position: fixed;
+    top: 71px;
+    left: 2.5%;
+    width: 95%;
+    height: 90%;
+    margin: 0;
 }
 
 .container {
     background: rgba(255, 197, 140, 0.2);
     margin-bottom: 2em;
-    min-height: 100%;
+    min-height: 92%;
     overflow: auto;
     padding: 2em 3em 0 3em;
+    width: 100%;
 }
 
 .footer {
@@ -28,7 +35,7 @@ html {
 }
 
 .footer .container {
-    background: rgba(255, 186, 117, 0.2);
+    background: rgba(0, 0, 0, 0.4);
     padding-top: 6px;
 }
 
@@ -41,4 +48,14 @@ html {
 .fade-tag{ /* For Safari 3.1 to 6.0 */
     transition: opacity 2s;
     opacity: 0;
+}
+
+@media (min-width: 768px) {
+    #content {
+        top: 71px;
+        left: 10%;
+        width: 80%;
+        height: 90%;
+        margin: 0;
+    }
 }
