--- a/.tmp/styles/main.css
+++ b/.tmp/styles/main.css
@@ -55,6 +55,10 @@ html {
     opacity: 0;
 }
 
+.horizontal-line {
+    border-bottom: 1px black solid;
+}
+
 @media (min-width: 768px) {
     #content {
         top: 71px;
