--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,18 +1,29 @@
 <div class="row">
-    <form name="loginForm" ng-submit="login()">
+    <form name="loginForm" class="form-horizontal" ng-submit="login()">
+
         <div class="form-group has-success"
              ng-class="{'has-success':loginForm.email.$valid,'has-error':loginForm.email.$invalid}">
-            <label for="email">Email</label>
-            <input type="email" name="email" class="form-control"
-                   id="email" ng-model="loginUser.email" placeholder="Enter email" required>
+            <label for="email" class="col-sm-2 control-label">Email</label>
+
+            <div class="col-sm-10">
+                <input type="email" name="email" class="form-control"
+                       id="email" ng-model="loginUser.email" placeholder="Enter email" required>
+            </div>
         </div>
         <div class="form-group has-success"
              ng-class="{'has-success':loginForm.password.$valid,'has-error':loginForm.password.$invalid}">
-            <label for="password">Password</label>
-            <input type="password" name="password" class="form-control"
-                   id="password" ng-model="loginUser.password" placeholder="Password" required>
+            <label for="password" class="col-sm-2 control-label">Password</label>
+
+            <div class="col-sm-10">
+                <input type="password" name="password" class="form-control"
+                       id="password" ng-model="loginUser.password" placeholder="Password" required>
+            </div>
         </div>
-        <button type="submit" class="btn btn-primary" id="submit">Log in</button>
-        <a ui-sref="app.register" class="btn btn-primary" role="button">Register</a>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-primary" id="submit">Log in</button>
+                <a ui-sref="app.register" class="btn btn-primary" role="button">Register</a>
+            </div>
+        </div>
     </form>
 </div>
