--- a/app/views/error.html
+++ b/app/views/error.html
@@ -1,5 +1,5 @@
 <div class="row">
     <div class="col-lg-12">
-        <p>An error occured</p>
+        <p translate="ERROR_TEXT"></p>
     </div>
 </div>
