--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -53,14 +53,15 @@ html {
     margin-left: auto;
 }
 
-.fade-tag{
+.fade-tag {
     -webkit-transition: opacity 2s; /* For Safari 3.1 to 6.0 */
     transition: opacity 2s;
     opacity: 0;
 }
 
-.horizontal-line {
-    border-bottom: 1px black solid;
+.view-heading {
+    margin-bottom: 2em;
+    padding-left: 3px;
 }
 
 @media (min-width: 768px) {
