--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-lg-12">
-        <h1>About</h1>
+        <h1 translate="ABOUT_TITLE"></h1>
 
         <p class="lead">This is some basic info</p>
 
