--- a/app/views/menubar.html
+++ b/app/views/menubar.html
@@ -20,8 +20,9 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a ui-sref="{{menu.about}}" translate="MENUBAR_ABOUT" ng-click="collapseMenu()"></a></li>
-                <li><a ui-sref="{{menu.login}}" translate="MENUBAR_LOGIN" ng-click="collapseMenu()"></a></li>
-                <li><a ui-sref="{{menu.register}}" translate="MENUBAR_REGISTER" ng-click="collapseMenu()"></a></li>
+                <li ng-if="!user.isLoggedIn"><a ui-sref="{{menu.login}}" translate="MENUBAR_LOGIN" ng-click="collapseMenu()"></a></li>
+                <li ng-if="!user.isLoggedIn"><a ui-sref="{{menu.register}}" translate="MENUBAR_REGISTER" ng-click="collapseMenu()"></a></li>
+                <li ng-if="user.isLoggedIn"><a ui-sref="{{menu.logout}}" translate="MENUBAR_LOGOUT" ng-click="logout()"></a></li>
             </ul>
         </div>
     </div>
