added a translation added a brand

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -2,7 +2,7 @@
     <div class="col-lg-12">
         <h1 translate="ABOUT_TITLE"></h1>
 
-        <p class="lead">This is some basic info</p>
+        <p class="lead" translate="ABOUT_SUBTITLE"></p>
 
         <p>
             Suspendisse mauris sapien, volutpat ac dolor a, vulputate imperdiet leo. Nullam consequat, nunc tempor
