--- a/app/views/menubar.html
+++ b/app/views/menubar.html
@@ -8,7 +8,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" ui-sref="{{menu.home}}" translate="MENUBAR_HOME" ng-click="collapseMenu()">
+            <a class="navbar-brand" id="brand" ui-sref="{{menu.home}}" ng-click="collapseMenu()">
+                <span>OLIVIER</span>CAPPELLE
             </a>
         </div>
 
