--- a/app/views/register.html
+++ b/app/views/register.html
@@ -41,16 +41,26 @@
                 <input type="password" name="passwordConfirm" class="form-control"
                        id="passwordConfirm" ng-model="registerUser.passwordConfirm"
                        placeholder="{{'REGISTER_PASSWORD_CONFIRMATION_PLACEHOLDER' | translate}}"
-                       required ng-change="checkPasswordsMatching()">
+                       ng-change="checkPasswordsMatching()">
             </div>
         </div>
         <div class="form-group has-success"
              ng-class="{'has-success':registerForm.dateOfBirth.$valid,'has-error':registerForm.dateOfBirth.$invalid}">
             <label for="dateOfBirth" class="col-sm-2 control-label" translate="REGISTER_DATE_OF_BIRTH"></label>
 
-            <div class="col-sm-10">
+            <!--<div class="col-sm-10">
                 <input type="text" name="dayOfBirth" class="form-control"
                        id="dateOfBirth" ng-model="registerUser.dateOfBirth" placeholder="{{'REGISTER_DATE_OF_BIRTH_PLACEHOLDER' | translate}}" required>
+            </div>-->
+            <div class="col-sm-10">
+                <p class="input-group">
+                    <input id="dateOfBirth" type="date" class="form-control" uib-datepicker-popup
+                           ng-model="registerUser.dateOfBirth" is-open="status.opened" max-date="maxDate"
+                           ng-required="true" />
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+              </span>
+                </p>
             </div>
         </div>
         <div class="form-group">
